Added missing support for `ida_kernwin.Chooser.OnGetEA`

--- a/examples/index.html
+++ b/examples/index.html
@@ -3993,14 +3993,14 @@ IDA, with a custom widget.
 
             <li>APIs used
               <ul>
-                <li>Choose</li>
-                <li>Choose.ALL_CHANGED</li>
-                <li>Choose.CHCOL_HEX</li>
-                <li>Choose.CHCOL_PLAIN</li>
-                <li>Choose.NOTHING_CHANGED</li>
+                <li>ida_funcs.get_func_name</li>
+                <li>ida_kernwin.Choose</li>
+                <li>ida_kernwin.Choose.ALL_CHANGED</li>
+                <li>ida_kernwin.Choose.CHCOL_FNAME</li>
+                <li>ida_kernwin.Choose.CHCOL_HEX</li>
+                <li>ida_kernwin.Choose.CHCOL_PLAIN</li>
                 <li>idautils.Functions</li>
                 <li>idc.del_func</li>
-                <li>idc.jumpto</li>
               </ul>
             </li>
 
