Minor updates (pydoc injections)

--- a/examples/index.html
+++ b/examples/index.html
@@ -4089,6 +4089,8 @@ freshly-created widget (using `ida_kernwin.attach_action_to_popup`.)
             <li>APIs used
               <ul>
                 <li>ida_kernwin.AST_ENABLE_ALWAYS</li>
+                <li>ida_kernwin.IK_DELETE</li>
+                <li>ida_kernwin.IK_ESCAPE</li>
                 <li>ida_kernwin.action_desc_t</li>
                 <li>ida_kernwin.action_handler_t</li>
                 <li>ida_kernwin.ask_long</li>
